# Jetson-Nano-Video-Streaming-Server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install_jetson.sh  pyproject.toml  requirements.txt
client/: README.md  simple_viewer.html  viewer.py
docs/: architecture.md  docker_on_jetson.md  future_ai_inference_integration.md  future_model_inference_integration.md  jetson_setup.md  latency_test.md  troubleshooting.md
object_stream/: __init__.py  live_view.py  model_variants.py  web_server.py
sample_data/: README.md
scripts/: benchmark_fps.py  check_camera.py  install_systemd_service.sh  run_docker.sh  run_local.sh
server/: __init__.py  config.py  main.py
server/camera/: __init__.py  camera_source.py  rtsp_source.py  usb_camera.py  video_file_source.py
server/processing/: __init__.py  frame_preprocessor.py  inference_hook.py  overlay.py
server/streaming/: __init__.py  frame_buffer.py  mjpeg_streamer.py  rtsp_streamer.py  websocket_streamer.py
server/utils/: device_monitor.py  fps_counter.py
systemd/: jetson-streaming-server.service
tools/: __init__.py  benchmark_camera_matrix.py  benchmark_models.py  build_tensorrt_engine.py  capture_public_image.py  probe_camera.py
