[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-nano-video-streaming-server"
version = "0.1.0"
description = "Real-time video streaming server for Jetson Nano with an optional model inference hook."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "psutil>=5.8.0",
    "ultralytics>=8.3,<9",
]

[project.scripts]
jetson-stream-server = "server.main:main"
jetson-stream-viewer = "client.viewer:main"

[tool.setuptools.packages.find]
include = ["server*", "client*"]

